[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corrupy"
version = "0.1.0"
authors = [
  { name = "CensoredUsername", email = "cens.username@gmail.com" },
]
description = "A library for analysing python pickles safely"
readme = "README.md"
keywords = ["pickle", "security"]
license = "WTFPL"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=2.7"

[project.urls]
Homepage = "https://github.com/CensoredUsername/corrupy"
Issues = "https://github.com/CensoredUsername/corrupy/issues"
Documentation = "https://corrupy.readthedocs.io/en/latest/"
