[metadata]
name = picklemagic
version = 0.1
author = CensoredUsername
url = https://github.com/CensoredUsername/picklemagic
description = A library for analysing python pickles safely 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pickle, security
license = WTFPL
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: WTFPL
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = picklemagic, pickleast
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
